--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,28 @@
     </header>
 
     <section id="contact">
-        <h2>Contact Information</h2>
-        <p>Email: crisa0907@gmail.com</p>
-        <p>Phone: (123) 456-7890</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/cristal-esperanza" target="_blank"><span class="purple-text">My LinkedIn Profile</span></a></p>
+        <div class="contact-info">
+            <h2>Contact Information</h2>
+            <p>Email: crisa0907@gmail.com</p>
+            <p>Phone: (123) 456-7890</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/cristal-esperanza" target="_blank"><span class="purple-text">My LinkedIn Profile</span></a></p>
+        </div>
+
+        <div class="contact-form">
+            <h2>Send a Message</h2>
+            <form action="#" method="post">
+                <label for="name">Your Name:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Your Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
     </section>
 
     <footer>
